5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1679_1105.log
== SUBMITION (2019-04-30 13:27:07) 
-- CODE:
a=float(input(""))
print("Entrada: ", a)

if (a=="lobo"):
	print("Stark")
elif (a=="leao"):
	print("Lannister")
elif (a=="veado"):
	print("Baratheon")
elif (a=="dragao"):
	print("Targaryen")
elif (a=="rosa")
	print("Tyrell")
elif (a=="sol")
	print("Martell")
elif (a=="lula")
	print("Greyjoy")
elif (a=="esfolado")
	print("Bolton")
elif (a=="turta")
	print("Tully")
-- EXECUTION TIME:
0.16011
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 12
    elif (a=="rosa")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:28:48) 
-- CODE:
a=float(input(""))
print("Entrada: ", a)

if (a=="lobo"):
	print("Stark")
elif (a=="leao"):
	print("Lannister")
elif (a=="veado"):
	print("Baratheon")
elif (a=="dragao"):
	print("Targaryen")
elif (a=="rosa"):
	print("Tyrell")
elif (a=="sol"):
	print("Martell")
elif (a=="lula"):
	print("Greyjoy")
elif (a=="esfolado"):
	print("Bolton")
elif (a=="turta"):
	print("Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.187413
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 1, in <module>
    a=float(input(""))
ValueError: could not convert string to float: 'lula'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:30:01) 
-- CODE:
a=float(input(""))
print("Entrada: ", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif (a=="esfolado"):
	print("Casa: Bolton")
elif (a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.154773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 1, in <module>
    a=float(input(""))
ValueError: could not convert string to float: 'lula'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:30:03) 
-- CODE:
a=float(input(""))
print("Entrada: ", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif (a=="esfolado"):
	print("Casa: Bolton")
elif (a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=float(input(""))
ValueError: could not convert string to float: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:30:26) 
-- CODE:
a=input(",")
print("Entrada: ", a)

if (a=="lobo"):
	print("Casa: Stark")
elif (a=="leao"):
	print("Casa: Lannister")
elif (a=="veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a=="sol"):
	print("Casa: Martell")
elif (a=="lula"):
	print("Casa: Greyjoy")
elif (a=="esfolado"):
	print("Casa: Bolton")
elif (a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.212249
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
